--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,20 +1,37 @@
-.parent-login-div {
-  
+.parent-signup-div {
+
 }
-.login-page-div {
-    /* margin-top: 20%; */
+.signup-page-div {
+    
 }
 
-
-
-.username-email-div {
+.email-div {
     margin: auto;
     width: 35%;
     padding: 10px;
     max-width: 600px;
     min-width: 350px;
 }
-.username-email-label {
+.email-label {
+    font-family: Arial, Helvetica, sans-serif;
+}
+.email-input-box {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.username-div {
+    margin: auto;
+    width: 35%;
+    padding: 10px;
+    max-width: 600px;
+    min-width: 350px;
+}
+.username-label {
     font-family: Arial, Helvetica, sans-serif;
 }
 .username-input-box {
@@ -25,10 +42,6 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
-
-
-
-
 
 .password-div {
     margin: auto;
@@ -49,17 +62,33 @@
     box-sizing: border-box;
 }
 
-
-
-
-.login-button-div {
+.confirm-password-div {
     margin: auto;
     width: 35%;
     padding: 10px;
     max-width: 600px;
     min-width: 350px;
 }
-.login-button {
+.confirm-password-label {
+    font-family: Arial, Helvetica, sans-serif;
+}
+.confirm-password-input-box {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.signup-button-div {
+    margin: auto;
+    width: 35%;
+    padding: 10px;
+    max-width: 600px;
+    min-width: 350px;
+}
+.signup-button {
     background-color: #15d08b;
     color: white;
     padding: 14px 20px;
@@ -68,3 +97,24 @@
     cursor: pointer;
     width: 100%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
