--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -1,8 +1,29 @@
 .parent-signup-div {
-
+    margin-top: 80px;
 }
 .signup-page-div {
     
+}
+
+.signup-login-errors {
+    box-sizing: border-box;
+  border-radius: 10px;
+  /* background-color: rgba(255, 0, 0, 0.22); */
+  color: orangered;
+  font-size: 16px;
+  height: 100%;
+  padding: 10px 15px;
+  padding-left: 35px;
+  max-width: 600px;
+    min-width: 350px;
+    width: 35%;
+  /* border: 1px solid rgba(255, 0, 0, 0.2); */
+  margin-bottom: 15px;
+  line-height: 25px;
+  list-style-type: none;
+  margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
 }
 
 .email-div {
