created HomePage component, created explore nearby section and did a lot of css

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -60,7 +60,7 @@
     min-width: 350px;
 }
 .login-button {
-    background-color: #15d08b;
+    background-color: #90c590;
     color: white;
     padding: 14px 20px;
     /* margin: 8px 0; */
