created frontend routes for sanfrancisco, sanjose, berkeley, oakland. created backend route for berkeley and thunk function

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -163,5 +163,6 @@ list-style-type: none;
     left: 100px;
     font-family: Arial, Helvetica, sans-serif; 
     color: orangered;
+    font-weight: lighter;
     /* font-style: italic; */
 }
