configured /berkeley to display a list of all posts from that city location, fixed a bug in the spot model, added css

--- a/frontend/src/components/Berkeley/Berkeley.css
+++ b/frontend/src/components/Berkeley/Berkeley.css
@@ -1,9 +1,63 @@
 .berkeley-main-images {
     height: 200px;
     width: 300px;
-    border-radius: 15px;
+    border-radius: 20px;
+    /* display: inline-block; */
+    /* padding-right: 10px; */
+    margin-right: 10px;
 }
 
 .berkeley-spots-div {
+    width: 671px;
+    height: 200px;
+    display: flex;
+    inset: 0px;
+    /* border-radius: 12px; */
+    /* border-bottom: 1px lightgrey solid; */
+    border-top: 1px lightgrey solid;
+    padding: 10px;
+}
 
+.berkeley-spots-title {
+    margin-top: 10px;
+   margin-bottom: 10px;
+   height: 35px;
+   /* font-size: 18px; */
+   /* border-bottom: 1px solid lightgrey; */
+    
+}
+
+.berkeley-spots-details {
+    color: grey;
+    /* border-top: 1px solid lightgrey; */
+    /* top: -5px;
+    padding-top: 5px; */
+}
+
+.berkeley-spots-price {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    top: 100px;
+    
+}
+
+.berkeley-spots-info-div {
+    width: 371px;
+}
+
+.berkeley-spots-parent-container {
+    border: 1px solid lightgrey;
+    padding: 20px;
+    padding-bottom: 10px;
+    width: 700px;
+    margin-top: 80px;
+    margin-left: 40px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.san-francisco-location-title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 32px;
+    padding-bottom: 20px;
 }
