--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -26,6 +26,7 @@
     border: none;
     border-radius: 30px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
+    
 
 }
 
@@ -40,6 +41,7 @@
     border: none;
     border-radius: 30px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
+    
 
 }
 
@@ -59,10 +61,11 @@
     width: 50px;
     color: white;
     border: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .explore-nearby-title {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 35px;
     padding-left: 20px;
     /* margin-bottom: 20px; */
@@ -118,6 +121,7 @@
     padding-left: 10px;
     display: flex;
     align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .explore-nearby-title-div {
