--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -62,7 +62,7 @@ body {
     padding-top: 15px;
     /* padding-left: 15px; */
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-left: 1px solid white;
     height: 25px;
     width: 70px;
@@ -125,7 +125,7 @@ list-style-type: none;
     /* padding: 20px; */
     margin-top: 50px;
     margin-right: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 10px;
     color: black;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -161,8 +161,8 @@ list-style-type: none;
 .navbar-logo-phrase {
     position: fixed;
     left: 100px;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: orangered;
-    font-weight: lighter;
+    /* font-weight: lighter; */
     /* font-style: italic; */
 }
