--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -59,7 +59,7 @@ body {
     color: black;
     font-weight:bold;
     padding:  10px;
-    padding-top: 15px;
+    padding-top: 12px;
     /* padding-left: 15px; */
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -90,6 +90,8 @@ list-style-type: none;
     position: fixed;
     top: 0;
     right: 0;
+    font-weight: lighter;
+    padding-top: 14px;
     /* z-index: 999; */
     /* width: 100%; */
     /* height: 50px; */
@@ -101,6 +103,8 @@ list-style-type: none;
     position: fixed;
     top: 0;
     right: 91px;
+    padding-top: 14px;
+    font-weight: lighter;
     /* z-index: 999; */
     /* height: 25px; */
 }
@@ -108,10 +112,12 @@ list-style-type: none;
 #navbar-home-button {
     /* border-right: 1px solid white; */
     position: fixed;
-    width: 270px;
+    width: 240px;
     font-size: 20px;
     top: 0;
     left: 0;
+    height: 30px;
+    padding-top: 10px;
     font-weight: lighter;
     
     /* border-right: orangered; */
