--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -4,28 +4,39 @@
 
 .single-spot-parent-container {
     margin-top: 80px;
+    margin-left: 26%;
+    margin-right: 10%;
+    width: 780px;
 }
 
 .single-spot-title {
+    margin-bottom: 10px;
     font-size: 26px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .single-spot-location {
+    margin-bottom: 10px;
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .single-spot-parent-images {
- display: flex;
+ display: grid;
+ grid-template-columns: 260px 260px 260px;
+ padding: 0px;
 }
 
 .single-spot-divs {
     width: 250px;
-    margin: 10px;
+    /* margin: 10px; */
+    margin-bottom: 10px;
+
 }
 .single-spot-images {
+    
   width:250px;
   height:189px;
+/* margin-left: 5px; */
   border-radius: 12px;
   /* display: flex; */
 }
@@ -33,6 +44,7 @@
     opacity: .9;
 }
 .single-spot-details {
+    margin-bottom: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .single-spot-reviews {
@@ -46,11 +58,56 @@
 }
 
 .single-spot-host {
+    margin-bottom: 5px;
     font-size: 22px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.single-spot-under-pics {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 800px;
+}
 
+.single-spot-about-this-space {
+    border-top: 1px solid lightgrey;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    font-size: 22px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.single-spot-under-pics-parent {
+    display: flex;
+}
+
+.single-spot-price {
+    /* display: flex; */
+    /* margin-top: 10px; */
+    /* margin-left: 10px; */
+    /* height: 285px; */
+    width: 250px;
+    height: 189px;
+    border: 1px solid lightgrey;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 12px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.check-avail-button {
+    margin-left: 7px;
+    margin-top: 110px;
+    height: 35px;
+    width: 235px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    background-color: red;
+}
+
+.single-spot-price-per-night {
+    padding-top: 12px;
+    padding-left: 12px;
+}
 
 
 
