--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -15,9 +15,9 @@ body {
     /* border-left: 1px solid white; */
     /* border-radius: 5px; */
 }
-#dropdown-menu-button:hover {
+/* #dropdown-menu-button:hover {
     background-color: black;
-}
+} */
 #dropdown-menu-image {
    /* background-color: #15d08b; */
     height: 35px;
@@ -152,10 +152,10 @@ list-style-type: none;
     border-radius: 25px;
 
 }
-.logout-button-inside-dropdown:hover {
+/* .logout-button-inside-dropdown:hover {
     background-color: rgb(221, 221, 221);
     color: black;
-}
+} */
 
 #username-inside-dropdown {
     padding-bottom: 10px;
@@ -176,4 +176,19 @@ list-style-type: none;
     color: orangered;
     /* font-weight: lighter; */
     /* font-style: italic; */
+}
+
+.create-listing-link {
+    position: fixed;
+    font-weight: lighter;
+    font-size: 16px;
+    top: 14px;
+    right: 75px;
+    text-decoration: none;
+    color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.create-listing-link:hover {
+    color: orangered;
 }
