--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -115,6 +115,16 @@
     color: blue;
 }
 
+.single-spot-delete-button {
+    border: none;
+    background-color: white;
+    margin-left: 605px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    color: blue;
+    cursor: pointer;
+}
+
 
 
 
