--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -14,7 +14,8 @@
 }
 .single-spot-location {
     color: grey;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    margin-right: 5px;
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -59,23 +60,26 @@
 }
 .single-spot-details {
     color: grey;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .single-spot-reviews {
-    margin-top: 20px;
+    margin-top: 50px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .single-spot-aboutThisSpace {
+    padding-bottom: 50px;
+    border-bottom: 1px solid lightgrey;
     margin-top: 25px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-weight: lighter;
+    font-size: 18px;
 }
 
 .single-spot-host {
     margin-top: 15px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: 22px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -102,7 +106,10 @@
     /* margin-top: 10px; */
     /* margin-left: 10px; */
     /* height: 285px; */
-    position:sticky;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 100px;
+    /* bottom: 1000px; */
     /* right: 10px; */
     /* bottom: 10px; */
     width: 372px;
@@ -116,8 +123,8 @@
 }
 
 .check-avail-button {
-    margin-left: 20px;
-    margin-top: 180px;
+    margin-left: 22px;
+    margin-top: 20px;
     height: 35px;
     width: 330px;
     border-radius: 5px;
@@ -128,27 +135,93 @@
 
 .single-spot-price-per-night {
     padding-top: 25px;
-    padding-left: 25px;
+    padding-left: 35px;
 }
 
 .single-spot-edit-button {
+    margin-left: 440px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
-    color: blue;
+    color: orangered;
 }
 
 .single-spot-delete-button {
     border: none;
     background-color: white;
-    margin-left: 605px;
+    /* margin-left: 970px; */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
-    color: blue;
+    color: orangered;
     cursor: pointer;
+    padding-left: 3px;
 }
 
+.checkin-checkout-guests-parent {
+    display: grid;
+    grid-template-areas: 
+    'div1 div1'
+    'div2 div3';
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    height: 130px;
+    width: 300px;
+    margin-top: 20px;
+    margin-left: 35px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+}
 
+.checkin-div {
+    padding-left: 10px;
+    padding-top: 10px;
+    border-right: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
+}
+.checkout-div {
+    padding-left: 10px;
+padding-top: 10px;
+    border-bottom: 1px solid lightgrey;
+}
 
+.guests-div {
+    padding-left: 10px;
+padding-top: 10px;
+}
 
+.single-spot-reviews {
+    margin-top: 50px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    border-bottom: 1px solid lightgrey;
+    padding-bottom: 50px;
+    border-top: 1px solid lightgrey;
+    padding-top: 50px;
+    width: 800px;
+}
 
+.what-this-place-offers {
+    margin-top: 45px;
+    font-size: 22px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
+.offerings-parent-div {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: grid;
+    font-weight: lighter;
+    grid-template-columns: 350px 350px;
+    grid-template-areas: 
+    '1 6'
+    '2 7'
+    '3 8'
+    '4 9'
+    '5 10';
+    margin-top: 35px;
+    margin-left: 150px;
+    padding-bottom: 20px;
+}
+
+.offerings-inner-divs {
+ margin-top: 15px;
+}
