--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -108,7 +108,7 @@
     /* height: 285px; */
     position: -webkit-sticky;
     position: sticky;
-    top: 100px;
+    top: 220px;
     /* bottom: 1000px; */
     /* right: 10px; */
     /* bottom: 10px; */
@@ -220,6 +220,7 @@ padding-top: 10px;
     margin-top: 35px;
     margin-left: 150px;
     padding-bottom: 20px;
+    /* width: 800px; */
 }
 
 .offerings-inner-divs {
