--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -60,7 +60,7 @@
 }
 .single-spot-details {
     color: grey;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .single-spot-reviews {
@@ -79,8 +79,9 @@
 
 .single-spot-host {
     margin-top: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     font-size: 22px;
+    width: 800px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -190,13 +191,12 @@ padding-top: 10px;
 }
 
 .single-spot-reviews {
-    margin-top: 50px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 22px;
-    border-bottom: 1px solid lightgrey;
-    padding-bottom: 50px;
-    border-top: 1px solid lightgrey;
-    padding-top: 50px;
+    /* border-bottom: 1px solid lightgrey; */
+    /* padding-bottom: 50px; */
+    /* border-top: 1px solid lightgrey; */
+    /* padding-top: 50px; */
     width: 800px;
 }
 
@@ -225,4 +225,48 @@ padding-top: 10px;
 
 .offerings-inner-divs {
  margin-top: 15px;
+}
+
+
+.single-spot-reviews-container {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 500px 500px;
+    margin-left: 10px;
+    gap: 30px;
+}
+
+.review-user-headshot {
+    height: 60px;
+    width: 60px;
+    border-radius: 250px;
+    object-fit: cover;
+    /* border: 4px solid orangered; */
+}
+
+.single-spot-hosted-and-pic {
+    display: flex;
+}
+
+.spot-user-headshot {
+    margin-top: 30px;
+   margin-left: 0px;
+    height: 60px;
+    width: 60px;
+    border-radius: 250px;
+    object-fit: cover;
+    /* border: 4px solid green; */
+    
+}
+.spot-user-headshot-span {
+    height: 60px;
+    width: 60px;
+}
+
+.review-div {
+    width: 450px;
+    height: 150px;
+    font-weight: lighter;
+    overflow:visible;
+    overflow-x: hidden;
 }
