--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -86,8 +86,10 @@
 }
 
 .single-spot-under-pics {
+    grid-area: section1;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 800px;
+    height: fit-content;
 }
 
 .single-spot-about-this-space {
@@ -99,17 +101,28 @@
 }
 
 .single-spot-under-pics-parent {
-    display: flex;
+    display: grid;
+    grid-template-areas: 
+    'section1 section2'
+    'section3 section2';
+    /* grid-template-rows: 700px 100px; */
+}
+
+.single-spot-price-parent {
+    float: right;
+    height: 1000px;
+    width: 500px;
+    /* z-index: 2; */
 }
 
 .single-spot-price {
     /* display: flex; */
     /* margin-top: 10px; */
     /* margin-left: 10px; */
-    /* height: 285px; */
+    /* height: 1000px; */
     position: -webkit-sticky;
     position: sticky;
-    top: 220px;
+    top: 100px;
     /* bottom: 1000px; */
     /* right: 10px; */
     /* bottom: 10px; */
@@ -203,14 +216,16 @@ padding-top: 10px;
 .what-this-place-offers {
     margin-top: 45px;
     font-size: 22px;
+    width: fit-content;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .offerings-parent-div {
+    grid-area: section3;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: grid;
     font-weight: lighter;
-    grid-template-columns: 350px 350px;
+    grid-template-columns: 300px 300px;
     grid-template-areas: 
     '1 6'
     '2 7'
@@ -218,13 +233,16 @@ padding-top: 10px;
     '4 9'
     '5 10';
     margin-top: 35px;
-    margin-left: 150px;
-    padding-bottom: 20px;
-    /* width: 800px; */
+    margin-left: 0px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid lightgrey;
+    width: 800px;
 }
 
 .offerings-inner-divs {
  margin-top: 15px;
+ width: fit-content;
+ margin-left: 100px;
 }
 
 
@@ -233,7 +251,7 @@ padding-top: 10px;
     justify-content: center;
     grid-template-columns: 500px 500px;
     margin-left: 10px;
-    gap: 30px;
+    gap: 20px;
 }
 
 .review-user-headshot {
@@ -266,7 +284,17 @@ padding-top: 10px;
 .review-div {
     width: 450px;
     height: 150px;
+    margin-top: 15px;
     font-weight: lighter;
     overflow:visible;
     overflow-x: hidden;
+}
+
+.review-username {
+    padding-left: 10px;
+}
+
+.username-and-photo {
+    display: flex;
+    align-items: center;
 }
