--- a/frontend/src/components/LeaveReviewModal/LeaveReview.css
+++ b/frontend/src/components/LeaveReviewModal/LeaveReview.css
@@ -11,3 +11,36 @@
 .leave-review:hover {
     color:orangered;
 }
+
+.leave-review-textarea {
+    height: 250px;
+    width: 400px;
+    border-radius: 10px;
+}
+
+.leave-review-form {
+    display: flex;
+    justify-content: center;
+    height: 500px;
+}
+
+.leave-review-submit-button {
+    border: none;
+    background-color: #FFFDFA;
+    color: black;
+    font-size: 22px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: lighter;
+    cursor: pointer;
+}
+
+.leave-review-submit-button:hover {
+    color:orangered;
+}
+
+.leave-a-review-title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    font-weight: lighter;
+    padding-bottom: 10px;
+}
