--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -75,6 +75,11 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: lighter;
     font-size: 18px;
+    /* overflow:visible;
+    overflow-x: hidden;
+    height: 300px; */
+    
+
 }
 
 .single-spot-host {
@@ -153,7 +158,7 @@
 }
 
 .single-spot-edit-button {
-    margin-left: 400px;
+    margin-left: 360px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     color: orangered;
