--- a/frontend/src/components/LeaveReviewModal/LeaveReview.css
+++ b/frontend/src/components/LeaveReviewModal/LeaveReview.css
@@ -42,5 +42,19 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 22px;
     font-weight: lighter;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
+    padding-top: 10px;
+}
+
+
+.review-error-handler {
+    /* padding-top: 2px; */
+    list-style-type: none;
+    color: red;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.title-handler-div {
+    display: flex;
 }
