--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -115,7 +115,7 @@
 
 .single-spot-price-parent {
     float: right;
-    height: 1000px;
+    /* height: 1000px; */
     width: 500px;
     /* z-index: 2; */
 }
@@ -257,6 +257,7 @@ padding-top: 10px;
     grid-template-columns: 500px 500px;
     margin-left: 10px;
     gap: 20px;
+    padding-bottom: 100px;
 }
 
 .review-user-headshot {
@@ -302,4 +303,36 @@ padding-top: 10px;
 .username-and-photo {
     display: flex;
     align-items: center;
+}
+
+.other-features-parent {
+    grid-area: section3;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: grid;
+    /* font-weight: lighter; */
+    grid-template-columns: 300px;
+    grid-template-areas: 
+    '1'
+    '2'
+    '3'
+    '4';
+    margin-top: 35px;
+    /* margin-left:100px; */
+    padding-bottom: 60px;
+    margin-bottom: 40px;
+    border-bottom: 1px solid lightgrey;
+    width: 800px;
+    gap: 30px;
+}
+
+.other-features-inner-divs-title {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-weight: bold; */
+    margin-left: 100px;
+    width: 300px;
+}
+
+.other-features-inner-divs-content {
+    font-weight: lighter;
+    color: grey;
 }
