--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -137,3 +137,36 @@
     margin-bottom: 30px;
     margin-top: 10px;
 }
+
+.get-all-spots-title {
+    
+    position: absolute;
+    z-index: 2;
+    top: 325px;
+    left: 210px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 33px;
+color: white;
+}
+
+.get-all-spots {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: absolute;
+    font-size: 22px;
+    z-index: 2;
+    color: black;
+    top: 400px;
+    left: 350px;
+    text-decoration: none;
+    background-color: white;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 12px;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+}
+
+.get-all-spots:hover {
+    color: orangered;
+}
