--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -158,7 +158,7 @@
 }
 
 .single-spot-edit-button {
-    margin-left: 360px;
+    padding-left: 3px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
     color: orangered;
