--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -30,12 +30,13 @@ body {
    /* padding-left: 10px; */
     height: 24px;
     width: 24px;
+    
     vertical-align: middle;
 }
 
 #email-inside-dropdown {
    
-    
+    display: flex;
    
 }
 
@@ -125,16 +126,17 @@ list-style-type: none;
 }
 
 .profile-dropdown {
-   
+   /* display: flex; */
     float: right;
-    width: 175px;
-    height: 150px;
+    width: 190px;
+    height: auto;
     border: none;
+    /* justify-content: center; */
     list-style-type: none;
     border-radius: 10px;
     background-color: #FFFDFA;
     /* padding: 20px; */
-    margin-top: 50px;
+    margin-top: 80px;
     margin-right: 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 10px;
@@ -144,16 +146,26 @@ list-style-type: none;
 .logout-button-inside-dropdown {
     /* height: 40px;    */
     margin-top: 12px;
-    margin-right: 56px;
+    /* margin-right: 56px; */
+    margin-left: 63px;
     padding: 8px;
     border: none;
     color: black;
     background-color: #FFFDFA;
     /* font-weight: bold; */
-    float: right;
+    /* justify-content: center; */
     /* border-radius: 25px; */
     cursor: pointer;
 
+}
+
+.logout-button-inside-dropdown:hover {
+    color: orangered;
+}
+
+.logout-button-parent {
+    display: flex;
+    justify-content: center;
 }
 /* .logout-button-inside-dropdown:hover {
     background-color: rgb(221, 221, 221);
@@ -165,6 +177,7 @@ list-style-type: none;
     margin-left: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid #eeebeb;
+    overflow-y:auto;
 }
 
 #email-inside-dropdown {
@@ -173,6 +186,8 @@ list-style-type: none;
     padding-top: 10px;
     border-bottom: 1px solid #eeebeb;
     padding-bottom: 10px;
+    overflow-y:auto;
+    /* overflow: scroll; */
 }
 
 .navbar-logo-phrase {
