--- a/frontend/src/components/LeaveReviewModal/LeaveReview.css
+++ b/frontend/src/components/LeaveReviewModal/LeaveReview.css
@@ -13,9 +13,12 @@
 }
 
 .leave-review-textarea {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 250px;
     width: 400px;
-    border-radius: 10px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: lighter;
 }
 
 .leave-review-form {
