--- a/frontend/src/components/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/SingleSpot/SingleSpot.css
@@ -336,3 +336,52 @@ padding-top: 10px;
     font-weight: lighter;
     color: grey;
 }
+
+.edit-pencil-icon {
+    height: 17px;
+    width: 17px;
+}
+
+.edit-pencil-icon {
+    height: 17px;
+    width: 17px;
+}
+
+.delete-trashcan-icon {
+    height: 17px;
+    width: 17px;
+    margin-left: 5px;
+}
+
+.edit-cancel-delete-button-parent {
+    display: flex;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.div-around-edit {
+display: flex;
+align-items: center;
+}
+
+.dit-around-cancel {
+    display: flex;
+    align-items: center;
+}
+
+.div-around-delete {
+    display: flex;
+    align-items: center;
+}
+
+.input-box-for-edit {
+    height: 150px;
+    font-weight: lighter;
+    margin-top: 5px;
+    resize: none;
+    width: 444px;
+    border: 1px solid lightgray;
+    outline: none;
+    font-size: 22px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
